# flask-sample-app

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tasks.py
app/: __init__.py  config.py  errors.py
app/modules/auth/: auth_blueprint.py  auth_forms.py
app/modules/auth/templates/: login.html
app/modules/dashboard/: dashboard_blueprint.py
app/modules/dashboard/templates/: dashboard.html
app/modules/forgot_password/: forgot_password_blueprint.py  forgot_password_forms.py  forgot_password_service.py
app/modules/forgot_password/templates/: forgot_password.html  reset_password.html
app/modules/public_pages/: public_pages_blueprint.py
app/modules/public_pages/templates/: home.html
app/modules/user/: user_blueprint.py  user_forms.py  user_model.py  user_repo.py  user_service.py
app/modules/user/templates/: user_register.html
app/scripts/: generate_secret.py
app/static/: style.css
app/static/src/: global.css
app/templates/: base_layout.html  dashboard.html  home.html  login.html
app/templates/errors/: error.html
app/templates/layouts/: base.html  base_layout.html  dashboard_layout.html  public_layout.html
app/templates/macros/: field_errors.html  message.html
app/templates/segments/: flash.html  navbar.html
app/utilities/: env.py  jwt.py  password_hasher.py
